@@ -81,6 +81,7 @@ stg-railType=Rail type
 stg-place-ghosts=Place ghosts
 stg-mirror-concrete=Mirror concrete
 stg-remove-cliffs=Remove cliffs
+stg-fullCruise=Maximum cruise speed
 
 [entity-name]
 farl=F.A.R.L.
@@ -98,6 +99,8 @@ farl-roboport=F.A.R.L. Module
 
 [controls]
 toggle-train-control=Toggle manual train control
+farl-toggle-cruise-control=Toggle cruise control
+farl-toggle-active=Start/Stop FARL
 
 [mod-setting-name]
 farl_display_messages=Display toggle messages
