@@ -2,6 +2,8 @@
 Version: 4.0.6
 Date: ????
   Changes:
+    - Added hotkeys to start/stop FARL (Shift + A) and toggle cruise control (Shift + C)
+    - Added an option to use maximum speed when in cruise mode
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.5
 Date: 2020-09-14
